--- a/mockez-back/pom.xml
+++ b/mockez-back/pom.xml
@@ -54,6 +54,16 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,13 +94,13 @@
                 <version>5.1.0</version>
                 <executions>
                     <execution>
-                        <id>gedapi</id>
+                        <id>mockez</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
                             <inputSpec>
-                                ${project.basedir}/src/main/resources/static/gedgd.yaml
+                                ${project.basedir}/src/main/resources/static/mockez.yaml
                             </inputSpec>
                             <generatorName>spring</generatorName>
                             <apiPackage>com.mockez.api</apiPackage>
@@ -109,51 +119,6 @@
                                 <dateLibrary>java8</dateLibrary>
                                 <interfaceOnly>true</interfaceOnly>
                                 <useBeanValidation>true</useBeanValidation>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>alfresco-core</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>
-                                ${project.basedir}/src/main/resources/openapi/alfresco/alfresco-core.yaml
-                            </inputSpec>
-                            <generatorName>java</generatorName>
-                            <apiPackage>org.alfresco.sdk.core.api</apiPackage>
-                            <modelPackage>org.alfresco.sdk.core.model</modelPackage>
-                            <generateApiTests>false</generateApiTests>
-                            <generateApiDocumentation>false</generateApiDocumentation>
-                            <generateModelTests>false</generateModelTests>
-                            <generateModelDocumentation>false</generateModelDocumentation>
-                            <additionalProperties>library=webclient</additionalProperties>
-                            <typeMappings>file=org.springframework.core.io.Resource</typeMappings>
-                            <configOptions>
-                                <dateLibrary>java8</dateLibrary>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>alfresco-search</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>
-                                ${project.basedir}/src/main/resources/openapi/alfresco/alfresco-search.yaml
-                            </inputSpec>
-                            <generatorName>java</generatorName>
-                            <apiPackage>org.alfresco.sdk.search.api</apiPackage>
-                            <modelPackage>org.alfresco.sdk.search.model</modelPackage>
-                            <generateApiTests>false</generateApiTests>
-                            <generateApiDocumentation>false</generateApiDocumentation>
-                            <generateModelTests>false</generateModelTests>
-                            <generateModelDocumentation>false</generateModelDocumentation>
-                            <additionalProperties>library=webclient</additionalProperties>
-                            <configOptions>
-                                <dateLibrary>java8</dateLibrary>
                             </configOptions>
                         </configuration>
                     </execution>
