--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -1,107 +1,119 @@
 openapi: "3.0.0"
+info:
+  title: Mockez API
+  description: Mockez.
+  version: 0.0.1
+paths:
+  /users:
+    get:
+      summary: Returns a list of users.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200': # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
 components:
   schemas:
     Field:
-      allOf:
-        - type: object
-          description: table Field
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-              example: F1
-            name:
-              readOnly: false
-              type: string
-              description: name of field
-              example:
-            type_id:
-              $ref: '#/components/schemas/Type'
-            gentype_id:
-              $ref: '#/components/schemas/GenType'
-            option_id:
-              $ref: '#/components/schemas/Option'
+        type: object
+        description: table Field
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+            example: F1
+          name:
+            readOnly: false
+            type: string
+            description: name of field
+            example:
+          type_id:
+            $ref: '#/components/schemas/Type'
+          gentype_id:
+            $ref: '#/components/schemas/GenType'
+          option_id:
+            $ref: '#/components/schemas/Option'
     Type:
-      allOf:
-        - type: object
-          description: table Type
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-            type:
-              readOnly: false
-              type: string
-              description: name of field
-            description:
-              readOnly: false
-              type: string
-              description: type in SQL
+        type: object
+        description: table Type
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+          type:
+            readOnly: false
+            type: string
+            description: name of field
+          description:
+            readOnly: false
+            type: string
+            description: type in SQL
     GenType:
-      allOf:
-        - type: object
-          description: table GenType
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-            type:
-              readOnly: false
-              type: string
-              description: type for generate
-            description:
-              readOnly: false
-              type: string
-              description: description for generate type
-            category_id:
-              $ref: '#/components/schemas/Category'
+        type: object
+        description: table GenType
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+          type:
+            readOnly: false
+            type: string
+            description: type for generate
+          description:
+            readOnly: false
+            type: string
+            description: description for generate type
+          category_id:
+            $ref: '#/components/schemas/Category'
     Category:
-      allOf:
-        - type: object
-          description: table Category
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-            type:
-              readOnly: false
-              type: string
-              description: name of category
-            description:
-              readOnly: false
-              type: string
-              description: description for generate type
+        type: object
+        description: table Category
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+          type:
+            readOnly: false
+            type: string
+            description: name of category
+          description:
+            readOnly: false
+            type: string
+            description: description for generate type
     Data:
-      allOf:
-        - type: object
-          description: table Data
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-            value:
-              readOnly: false
-              type: string
-              description: value of data
-            gentype_id:
-              $ref: '#/components/schemas/GenType'
+        type: object
+        description: table Data
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+          value:
+            readOnly: false
+            type: string
+            description: value of data
+          gentype_id:
+            $ref: '#/components/schemas/GenType'
     Option:
-      allOf:
-        - type: object
-          description: table Option
-          properties:
-            id:
-              readOnly: true
-              type: string
-              description: id of table
-            blank:
-              readOnly: false
-              type: integer
-              description: blank percent
+        type: object
+        description: table Option
+        properties:
+          id:
+            readOnly: true
+            type: string
+            description: id of table
+          blank:
+            readOnly: false
+            type: integer
+            description: blank percent
 
 
