--- a/mockez-back/pom.xml
+++ b/mockez-back/pom.xml
@@ -68,6 +68,16 @@
 
     <build>
         <plugins>
+<!--            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+<!--            -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -86,6 +96,7 @@
                 <configuration>
                     <source>18</source>
                     <target>18</target>
+
                 </configuration>
             </plugin>
             <plugin>
