--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -4,19 +4,194 @@ info:
   description: Website MOCKEZ generates data for system testing.
   version: 0.0.1
 paths:
-  /users:
+  /api/v1/type:
+    parameters:
+      - in: header
+        name: get-type
+        schema:
+          type: string
+        required: true
     get:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+      operationId: getType
+      tags:
+        - Type
+      description: Get all Type from data
       responses:
-        '200': # status code
-          description: A JSON array of user names
+        200:
+          description: The query is successful
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
+                $ref: '#/components/schemas/Type'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /api/v1/category:
+    parameters:
+      - in: header
+        name: get-category
+        schema:
+          type: string
+        required: true
+    get:
+      operationId: getCategory
+      tags:
+        - Category
+      description: Get all category from data
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /api/v1/gentype:
+    parameters:
+      - in: header
+        name: get-gentype
+        schema:
+          type: string
+        required: true
+    get:
+      operationId: getGenType
+      tags:
+        - GenType
+      description: Get all GenType from data
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenType'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /api/v1/category/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The Category ID
+        schema:
+          type: string
+      - in: header
+        name: get-category-byId
+        schema:
+          type: string
+        required: true
+    get:
+      operationId: getCategoryById
+      tags:
+        - Category
+      description: Returns  a category by id
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /api/v1/gentype/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The GenType ID
+        schema:
+          type: string
+      - in: header
+        name: get-gentype-byId
+        schema:
+          type: string
+        required: true
+    get:
+      operationId: getGenTypeById
+      tags:
+        - GenType
+      description: Returns  a gentype by id
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenType'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /api/v1/gentype?typeId=typeId:
+    parameters:
+      - in: query
+        name: getGenTypeByTypeId
+        style: deepObject
+        allowReserved: true
+        schema:
+          type: object
+
+    get:
+      operationId: getGenTypeByTypeId
+      tags:
+        - GenType
+      description: Returns  a gentype by type id
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenType'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
 components:
   schemas:
     Field:
