--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -1,18 +1,12 @@
-openapi: "3.0.0"
+openapi: "3.0.3"
 info:
   title: Mockez API
   description: Website MOCKEZ generates data for system testing.
   version: 0.0.1
 paths:
-  /api/v1/type:
-    parameters:
-      - in: header
-        name: get-type
-        schema:
-          type: string
-        required: true
+  /type:
     get:
-      operationId: getType
+      operationId: getTypes
       tags:
         - Type
       description: Get all Type from data
@@ -22,7 +16,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Type'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Type'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -33,15 +29,9 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /api/v1/category:
-    parameters:
-      - in: header
-        name: get-category
-        schema:
-          type: string
-        required: true
+  /category:
     get:
-      operationId: getCategory
+      operationId: getCategories
       tags:
         - Category
       description: Get all category from data
@@ -51,6 +41,38 @@ paths:
           content:
             application/json:
               schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /category/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The Category ID
+        schema:
+          type: string
+    get:
+      operationId: getCategory
+      tags:
+        - Category
+      description: Return a category
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
                 $ref: '#/components/schemas/Category'
         400:
           $ref: '#/components/responses/BadRequest'
@@ -62,15 +84,71 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /api/v1/gentype:
+  /gentype/{id}:
     parameters:
-      - in: header
-        name: get-gentype
+      - in: path
+        name: id
+        required: true
+        description: The GenType ID
         schema:
           type: string
-        required: true
     get:
       operationId: getGenType
+      tags:
+        - GenType
+      description: Return a gentype
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenType'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /gentype/{typeId}:
+    parameters:
+      - in: path
+        name: typeId
+        required: true
+        description: The typeId
+        schema:
+          type: string
+    get:
+      operationId: getGenTypeByTypeId
+      tags:
+        - GenType
+      description: Return a gentype by typeId
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GenType'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /gentype:
+    get:
+      operationId: getGenTypes
       tags:
         - GenType
       description: Get all GenType from data
@@ -80,7 +158,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenType'
+                type: array
+                items:
+                  $ref: '#/components/schemas/GenType'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -91,31 +171,27 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /api/v1/category/{id}:
-    parameters:
-      - in: path
-        name: id
-        required: true
-        description: The Category ID
-        schema:
-          type: string
-      - in: header
-        name: get-category-byId
-        schema:
-          type: string
-        required: true
-    get:
-      operationId: getCategoryById
+  /generate:
+    post:
+      operationId: generate
       tags:
-        - Category
-      description: Returns  a category by id
+        - Generate
+      description: Generate data
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenerateRequestBody'
       responses:
         200:
           description: The query is successful
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Category'
+                type: array
+                items:
+                  $ref: '#/components/schemas/GenType'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -126,72 +202,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /api/v1/gentype/{id}:
-    parameters:
-      - in: path
-        name: id
-        required: true
-        description: The GenType ID
-        schema:
-          type: string
-      - in: header
-        name: get-gentype-byId
-        schema:
-          type: string
-        required: true
-    get:
-      operationId: getGenTypeById
-      tags:
-        - GenType
-      description: Returns  a gentype by id
-      responses:
-        200:
-          description: The query is successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GenType'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/AuthenticationError'
-        403:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/ServerError'
-  /api/v1/gentype?typeId=typeId:
-    parameters:
-      - in: query
-        name: getGenTypeByTypeId
-        style: deepObject
-        allowReserved: true
-        schema:
-          type: object
 
-    get:
-      operationId: getGenTypeByTypeId
-      tags:
-        - GenType
-      description: Returns  a gentype by type id
-      responses:
-        200:
-          description: The query is successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GenType'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/AuthenticationError'
-        403:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/ServerError'
 components:
   schemas:
     Field:
@@ -314,3 +325,125 @@ components:
           default: 0
           type: integer
           description: blank percent
+    Error:
+      description: Schema for error response body
+      type: object
+      properties:
+        timestamp:
+          type: string
+        status:
+          type: integer
+        error:
+          type: string
+        message:
+          type: string
+        path:
+          type: string
+        code:
+          enum:
+            - UNEXPECTED_EXCEPTION
+            - AUTHENTICATION_EXCEPTION
+            - PERMISSION_EXCEPTION
+            - BAD_REQUEST
+            - NOT_FOUND
+            - UNPROCESSABLE_ENTITY
+            - CONFLICT
+            - INVALID_STATUS
+            - INVALID_PROPERTIES
+            - EXISTING_NAME
+            - CONTAINS_DOCUMENT
+            - CONTAINS_BUSINESS_FOLDER
+            - NOT_LOCKED
+            - INVALID_SORT
+            - ACTION_NOT_ALLOWED
+            - INVALID_CRITERIA
+            - MISSING_SEARCH_OPERATOR
+            - MISSING_SEARCH_CRITERIA
+          description: |
+            Ged error code:
+            * UNEXPECTED_EXCEPTION - unexpected error.
+            * AUTHENTICATION_EXCEPTION - user is not authenticated.
+            * PERMISSION_EXCEPTION - user does not have permission to perform the action.
+            * BAD_REQUEST - the request is wrong.
+            * NOT_FOUND - resource not found.
+            * UNPROCESSABLE_ENTITY - the resource is locked.
+            * CONFLICT - business error.
+            * INVALID_STATUS - resource status is not valid.
+            * INVALID_PROPERTIES - the properties/extension is not valid.
+            * EXISTING_NAME - the name already exists.
+            * CONTAINS_DOCUMENT - folder contains document(s) and cannot be deleted.
+            * CONTAINS_BUSINESS_FOLDER - interlayer folder contains business folder and cannot be deleted.
+            * NOT_LOCKED - document is not locked and cannot be unlocked.
+            * INVALID_SORT - missing sort field.
+            * ACTION_NOT_ALLOWED - not valid to move resource.
+            * INVALID_CRITERIA - search criteria is invalid.
+            * MISSING_SEARCH_OPERATOR - search operator is missing.
+            * MISSING_SEARCH_CRITERIA - search criteria is missing.
+        additionalMessage:
+          type: string
+    GenerateRequestBody:
+      type: object
+      description: The body of generate request
+      required:
+        - row
+        - format
+        - tableName
+        - isIncludeCreateTable
+        - fields
+      properties:
+        row:
+          readOnly: true
+          type: integer
+          default: 0
+          description: Row number of data
+        format:
+          readOnly: true
+          type: string
+          default: "SQL"
+          description: Format of data
+        tableName:
+          readOnly: true
+          type: string
+          description: Name of table
+        isIncludeCreateTable:
+          readOnly: true
+          type: boolean
+          default: false
+          description: Include create table
+        fields:
+          readOnly: true
+          type: array
+          items:
+            $ref: '#/components/schemas/Field'
+          description: Fields of table
+  responses:
+    NotFound:
+      description: The specified resource was not found
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    AuthenticationError:
+      description: Authentication Error
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    Unauthorized:
+      description: Unauthorized, access to this resource is not allowed
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    BadRequest:
+      description: Bad request, invalid query syntax
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    ServerError:
+      description: Internal Server Error
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Error'
