--- a/mockez-back/pom.xml
+++ b/mockez-back/pom.xml
@@ -19,6 +19,7 @@
         <springfox.swagger2.version>3.0.0</springfox.swagger2.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
         <openapi.generator.maven.plugin.version>5.1.0</openapi.generator.maven.plugin.version>
+        <mapstruct.version>1.5.2.Final</mapstruct.version>
     </properties>
     <dependencies>
         <dependency>
@@ -66,6 +67,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox.swagger2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
     </dependencies>
 
