--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -4,7 +4,7 @@ info:
   description: Website MOCKEZ generates source for system testing.
   version: 1.0.0
 paths:
-  /sqltype:
+  /sql-type:
     get:
       operationId: getSQLTypes
       tags:
@@ -84,7 +84,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /generatetype/{id}:
+  /generate-type/{id}:
     parameters:
       - in: path
         name: id
@@ -114,7 +114,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /generatetype/{sqlTypeId}:
+  /generate-type/{sqlTypeId}:
     parameters:
       - in: path
         name: sqlTypeId
@@ -146,7 +146,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /generatetype:
+  /generate-type:
     get:
       operationId: getGenerateTypes
       tags:
@@ -189,7 +189,11 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: array
+                items:
+                  type: object
+                  additionalProperties:
+                    type: string
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -375,7 +379,6 @@ components:
         - row
         - format
         - tableName
-        - isIncludeCreateTable
         - fields
       properties:
         row:
@@ -392,11 +395,6 @@ components:
           readOnly: true
           type: string
           description: Name of table
-        isIncludeCreateTable:
-          readOnly: true
-          type: boolean
-          default: false
-          description: Include create table
         fields:
           readOnly: true
           type: array
