MOC-28 : config APIs and databases

--- a/mockez-back/src/main/resources/application.properties
+++ b/mockez-back/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mockez_db
 spring.datasource.username=mockez_user
 spring.datasource.password=mockez_password
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
