--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -85,6 +85,37 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /category/{id}/generate-types/count:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The Category ID
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getGenerateTypesCount
+      tags:
+        - Category
+      description: Return number of generate types in category
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: integer
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /generate-type/{id}:
     parameters:
       - in: path
