--- a/mockez-front/package.json
+++ b/mockez-front/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@progress/kendo-angular-dialog": "^7.1.4",
     "file-saver": "^2.0.5",
+    "js2xmlparser": "^5.0.0",
+    "json-sql": "^0.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
